Fixed image stretch and added about page blank

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -55,12 +55,9 @@
 
 .portfolio-custom img {
     border: 1px solid black;
-    width: 350px;
-    height: 350px;
     padding: 3px;
     display: block;
     margin: 15px auto;
-
 }
 
 
